# app/routes/movie_routes.ts
@@ -3,6 +3,7 @@ import router from '@adonisjs/core/services/router'
 const MoviesController = () => import('#controllers/movies_controller')
 router
   .group(() => {
-    router.get('/', [MoviesController, 'stream']).as('movies.stream')
+    router.get('/', [MoviesController, 'paginate']).as('movies.paginate')
+    router.get('/stream', [MoviesController, 'stream']).as('movies.stream')
   })
-  .prefix('stream')
+  .prefix('movies')
